# qxbthree

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  pinned.rs  uptime.rs
src/routes/: home.rs
static/: dedent.js  figlet.js  reset.css
static/home/: commands.js  home.css  home.js  utils.js
templates/: home.html
